--- a/sass-style.scss
+++ b/sass-style.scss
@@ -9,7 +9,7 @@
 
 $primary-color: #E2001A;
 $primary-filter-css : invert(85%) sepia(243%) saturate(1576%) hue-rotate(-21deg) brightness(130%) contrast(100%);
-$secondary-color: #000000;
+$secondary-color: #001c3a;
 $font-stack: "Outfit", serif;
 
 body {
@@ -121,16 +121,18 @@ body {
             margin-bottom: 1rem;
         }
         .service-card {
-            margin: 1rem;
+            margin: 2rem 0.5rem;
             width: 45%;
             padding: 0.25rem;
             border: 1px solid #DDD;
 
             &.left-card {
                 float: left;
+                clear: left;
             }
             &.right-card {
                 float: right;
+                clear: right;
             }
 
             .card-image {
@@ -183,7 +185,14 @@ body {
                 &.image-card-four {
                     background-image: url(public/img/services/success-highlighted-with.jpg);    
                 }
+            }
+            h1 {
+                font-size: 2.25rem;
             } 
         }
+    }
+    .punch-phrase-ad {
+        background-color: $secondary-color;
+        height: 16rem;
     }
 }
