--- a/public/css/sass-style.scss
+++ b/public/css/sass-style.scss
@@ -86,6 +86,8 @@ body {
         // border-top: 1px solid $primary-color;
         position: relative;
         margin: 0;
+        width: 100%;
+        height: 100%;
 
         .slide-card {
             //display: none;
@@ -96,9 +98,9 @@ body {
                 background-image: linear-gradient(to right, $primary-color , rgba(255,0,0,0));
                 padding-left: 2rem;
                 position: absolute;
-                bottom: 0;
+                bottom: 0.25rem;
                 width: 40%;
-                height: 98%;
+                height: 100%;
                 display: flex;
                 p {
                     color: #FFF;
@@ -378,7 +380,7 @@ body {
 
     .footer-impacta {
         background-color: $secondary-color;
-        padding: 1rem 2rem;
+        padding: 2rem 1rem 0.5rem 1rem;
 
         .footer-section {
             float: left;
@@ -403,6 +405,16 @@ body {
                 width: 1.5rem;
                }
             }
+
+            .impacta-logo-dark {
+                float: right;
+                margin-top: 2.5rem;
+                img {
+                    width: 8rem;
+                }
+            }
+    
         }
+        
     }
 }
